add about ,education,experience

--- a/index.html
+++ b/index.html
@@ -124,6 +124,211 @@
           </div>
         </div>
       </div>
+<!-- ======= Interests ======= -->
+<div class="interests container">
+
+    <div class="section-title">
+      <h2>Interests</h2>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-3 col-md-4">
+        <div class="icon-box">
+          <i class="ri-global-line" style="color: #ffbb2c;"></i>
+          <h3>Software Development</h3>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
+        <div class="icon-box">
+          <i class="ri-database-2-line" style="color: #5578ff;"></i>
+          <h3>Machine Learning</h3>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
+        <div class="icon-box">
+          <i class="ri-camera-3-line" style="color: #e80368;"></i>
+          <h3>Computer Vision</h3>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
+        <div class="icon-box">
+          <i class="ri-english-input" style="color: #1c7d32;"></i>
+          <h3>Natural Language Processing</h3>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 mt-4">
+        <div class="icon-box">
+          <i class="ri-code-s-slash-fill" style="color: #28a745;"></i>
+          <h3>Software Engineering</h3>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 mt-4">
+        <div class="icon-box">
+          <i class="ri-bar-chart-box-line" style="color: #f1081f;"></i>
+          <h3>Visualization</h3>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 mt-4">
+        <div class="icon-box">
+          <i class="ri-file-list-3-line" style="color: #47aeff;"></i>
+          <h3>Algorithms</h3>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 mt-4">
+        <div class="icon-box">
+          <i class="ri-image-line" style="color: #ffc107;"></i>
+          <h3>Image Processing</h3>
+        </div>
+      </div>
+    </div>
+
+  </div><!-- End Interests -->
+</section><!-- End About Section -->
+
+
+
+<!-- ======= Education Section ======= -->
+<section id="education" class="services">
+  <div class="container">
+    <div class="section-title">
+      <h2>Education</h2>
+    </div>
+    <div class="row">
+      <div class="col-lg-12" data-aos="fade-up" style="display: inline-block;">
+
+
+          <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px 0px;padding-bottom: 5px;display: inline-block;">
+            <!-- <img src="assets/img/education/ASU.jpg" class="img-fluid" alt=""> -->
+            <!-- <h4 style="text-align:left;"><a href="https://www.asu.edu/" target="_blank" style="color:#12d640">Arizona State University</a><br> </h4> -->
+            <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>Bachelor Of Science (Physics(Hons))</em></p>
+            <!-- <h5 style="text-align:left;padding: 0px 10px;">Janurary 2021 - Present</h5> -->
+            <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Relevant Coursework</h6>
+            <ul style="text-align:left;color:#fff;">
+              <li>Quantum Mechanics</li>
+              <li>Classical Mechanics</li>
+              <li>Thermodynamics</li>
+              <li>Astrophysics</li>
+              <li>Particle Physics and Cosmology</li>
+              <li>Optics and Waves</li>
+              <li>Laboratory Techniques</li>
+              <li>Scientific Communication</li>
+              <li>...And Much More</li>
+            </ul>
+          </div>
+          <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px 0px;padding-bottom: 5px;display: inline-block;">
+            <!-- <img src="assets/img/education/au.png" class="img-fluid" alt=""> -->
+            <!-- <h4 style="text-align:left;"><a href="https://ahduni.edu.in/" target="_blank" style="color:#12d640">Ahmedabad University</a><br> </h4> -->
+            <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>Attended Sharpener.tech BootCamp</em></p>
+            <!-- <h5 style="text-align:left;padding: 0px 10px;">July 2014 - May 2018</h5> -->
+            <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Relevant Coursework</h6>
+            <ul style="text-align:left;color:#fff;">
+              <li>DSA-Basics of Coding, Looping, Arrays, Bit manipulation,Stacks and Queues, Recursion, Linked Lists</li>
+              <li>Web Development-Basics and Advanced Javascript, DOM Manipulation</li>
+              <li>React JS-Basics and Advanced React JS, Styling, Debugging and Lifecyle Methods</li>
+              <li>Node JS-Basics and Advanced Node JS, Databases, Debugging and Architecture</li>
+            </ul>
+          </div>
+          <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px 0px;padding-bottom: 5px;display: inline-block;">
+            <!-- <img src="assets/img/education/au.png" class="img-fluid" alt=""> -->
+            <!-- <h4 style="text-align:left;"><a href="https://ahduni.edu.in/" target="_blank" style="color:#12d640">Ahmedabad University</a><br> </h4> -->
+            <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>Pursuing Master in Computer Applications</em></p>
+            <!-- <h5 style="text-align:left;padding: 0px 10px;">July 2014 - May 2018</h5> -->
+            <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Relevant Coursework</h6>
+            <ul style="text-align:left;color:#fff;">
+              <li>Data Structures and Algorithms: Dive deeper into organizing and managing data efficiently, while learning about common algorithms used for searching, sorting, and optimization.</li>
+              <li>Database Management Systems: Exploreing the principles of database design, learn SQL for data manipulation, and how to create and maintain relational databases.</li>
+              <li>Operating Systems:Learning about network protocols, communication technologies, and networking infrastructure.</li>
+              <li>Algorithms &amp; Optimization for Big Data</li>
+              <li>Artificial Intelligence and Machine Learning</li>
+              <li>Networking and Internet Technologies</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+  <div class="portfolio">
+  <div class="container">
+    <div class="section-title">
+      <h2>Online Certification</h2>
+    </div>
+
+    <div class="row portfolio-container" style="position: relative; height: 437.75px;">
+
+       <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 0px; top: 0px;">
+        <div class="portfolio-wrap">
+          <img src="assets/img/certification/Scaler.png" class="img-fluid" alt="">
+          <div class="portfolio-info">
+            <h4>Scaler NodeJS Excellence</h4>
+            <div class="portfolio-links">
+              <a href="https://moonshot.scaler.com/s/sl/WGBpQPNM7I?_gl=1*4rpi1c*_ga*NzIyODI3MjcxLjE2OTMwOTk1OTE.*_ga_53S71ZZG1X*MTY5MzA5OTU5MS4xLjEuMTY5MzA5OTYzOS4xMi4wLjA." target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+         </div>
+        </div>
+
+      <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 370px; top: 0px;">
+        <div class="portfolio-wrap">
+          <img src="assets/img/certification/javascriptBasic.jpg" class="img-fluid" alt="">
+          <div class="portfolio-info">
+            <h4>HackerRank Javascript (B)</h4>
+            <div class="portfolio-links">
+              <a href="https://www.hackerrank.com/certificates/585c1376e374" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 740px; top: 0px;">
+        <div class="portfolio-wrap">
+          <img src="assets/img/certification/sql.jpg" class="img-fluid" alt="">
+          <div class="portfolio-info">
+            <h4>HackerRank SQL Advanced</h4>
+            <div class="portfolio-links">
+              <a href="https://www.hackerrank.com/certificates/b644077570b3" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      
+    </div>
+  </div>
+  </div>
+
+</section>
+<!-- End Education Section -->
+
+
+
+<!-- Start Experience Section -->
+
+<section id="experience" class="services">
+  <div class="container">
+    <div class="section-title">
+      <h2>Experience</h2>
+    </div>
+    <div class="row">
+        <div class="col-lg-12" data-aos="fade-up">
+            
+            <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
+                <img src="assets/img/certification/wipro.jpg" alt="Wipro Logo" style="max-width: 100px; margin-right: 15px; float: left;">
+               <h4 style="text-align:left;"><a href="https://www.wipro.com/" style="color:#12d640">Wipro Limited (India)</a><br> </h4>
+              <h5 style="text-align:left;">April 2022 - May 2023</h5>
+              <p style="text-align:left;color:#fff"><em>Associate Developer </em></p>
+              <ul style="text-align:left;">
+                <li>Build RESTful APIs and Managed Some Serverside Operations for the HealthCare Giant UHC group (OPTUM)</li>
+                <li>Configured, troubleshot, and administered server‑side web applications for the Enrollment department</li>
+                <li>Learnt Many Things related to Backend Services</li>
+              </ul>
+            </div>
+        </div>
+      </div>
+  </div>
+</section>
+
+<!-- End Experience Section -->
 
     </div><!-- End About Me -->
 <!-- Vendor JS Files -->
