--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <!--          <li><a href="#projects"> <span>Projects</span></a></li>-->
           <li><a href="#portfolio"> <span>Projects</span></a></li>
           <li><a href="#skills"> <span>Skills</span></a></li>
-          <li><a href="https://drive.google.com/file/d/1pT-Nk6AxY9ZOWBizuDb4htA3IiUF_fSe/view?usp=sharing" target="_blank"> <span>Resume</span></a></li>
+          <li><a href="https://drive.google.com/file/d/1hbRK0ddcA7vuMACw44k-9rd-ugDFy_Oe/view?usp=sharing" target="_blank"> <span>Resume</span></a></li>
           <!-- <li><a href="#links"> <span>Resume & Links</span></a></li> -->
           <li><a href="#contacts"> <span>Contact</span></a></li>
 
@@ -256,6 +256,19 @@
 
     <div class="row portfolio-container" style="position: relative; height: 437.75px;">
 
+      <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 740px; top: 0px;">
+        <div class="portfolio-wrap">
+          <img src="assets/img/certification/wipro1.jpg" class="img-fluid" alt="">
+          <div class="portfolio-info">
+            <h4>Wipro Training Certificate</h4>
+            <div class="portfolio-links">
+              <a href="https://drive.google.com/file/d/1GOvJHgwNKVzfDYMsgaF1UzwC1GcWt5FA/view" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
        <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 0px; top: 0px;">
         <div class="portfolio-wrap">
           <img src="assets/img/certification/Scaler.png" class="img-fluid" alt="">
@@ -291,7 +304,7 @@
           </div>
         </div>
       </div>
-
+      
       
     </div>
   </div>
